# Nar.Program

./: Program.oak  go.mod  go.sum  nar.json  oak.json
native/: !dumies.go  Program.go
native/dll/: libNar.Program.100.dylib  libNar.Program.dylib
native/dll-src/: CMakeLists.txt  _package.c  _package.h  cmd.c  lifecycle.c  program.c  sub.c  task.c
native/dll-src/include/: Nar.Program.h
native/js/: index.js
src/: Cmd.nar  Cmd.oak  Program.nar  Program.oak  Sub.nar  Sub.oak  Task.nar  Task.oak  TextPresenter.nar  TextPresenter.oak
